--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@
 }
 .body_visible {
 	opacity: 1;
+
 }
 
 /* End Preload */
@@ -20,3 +21,23 @@ body {
     background-color: #000;
     color: aqua;
 }
+
+.footer__inner-item {
+    /* align-items: center; */
+    text-align: center;
+}
+
+/* Start Sound */
+
+.soundbutton {
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    transition: 0.8s ease;
+}
+
+.soundbutton.paused {
+    opacity: 0.25;
+}
+
+/* End Sound */
