--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,8 +27,9 @@ body {
 }
 
 .footer__inner-item {
-    /* align-items: center; */
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Start Sound */
