--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,14 +17,19 @@
 
 /* End Preload */
 
+.container {
+    padding: 20px;
+}
+
 body {
     background-color: #000;
     color: aqua;
 }
 
 .footer__inner-item {
-    /* align-items: center; */
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Start Sound */
@@ -34,10 +39,12 @@ body {
     width: 50px;
     height: 50px;
     transition: 0.8s ease;
+
 }
 
 .soundbutton.paused {
     opacity: 0.25;
+
 }
 
 /* End Sound */
