--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 /* Preloader Start */
 
 .loaderArea {
-    background: linear-gradient(90deg, #FF4E50 10%, #F9D423 90%);
+    background: linear-gradient(90deg, #000000 10%, #000000 90%);
     overflow: hidden;
     position: fixed;
     left: 0;
