--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,10 @@
 
 /* End Preloader  */
 
+::-webkit-scrollbar {
+    width: 0;
+  }
+
 body {
     background-color: #000;
     moz-user-select: none;
