--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,7 @@ body {
     moz-user-select: none;
     -khtml-user-select: none; 
     user-select: none;
+    cursor: grab;
 }
 
 /* Start Fonts */
