--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,7 +95,7 @@ cursor: grabbing;
 .sold:hover:after {
     opacity: 100%;
 
-    content: "Highest Bid 15 SCRT";
+    content: "Owned by Catgeot";
     color: #fff;
     display: flex;
     text-align: center;
