--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,6 +64,94 @@
 
 /* End Preloader  */
 
+/* Start Preloader New */
+
+.preloader {
+
+    display: flex;
+    animation: spin-1 8s linear infinite;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    color: #ffffff;
+    opacity: 0;
+}
+
+
+
+
+.preloader,
+.preloader-ring {
+    transform-style: preserve-3d;
+
+}
+
+.preloader-ring {
+    animation: spin-2 4s linear infinite;
+    position: relative;
+    height: 60px;
+    width: 20px;
+}
+
+.preloader-ring:nth-child(even) {
+    animation-direction: reverse;
+}
+
+.preloader-sector {
+    font-size: 25px;
+    line-height: 60px;
+    font-family: raleway_c, sans-serif;
+    font-weight: 600;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-transform: uppercase;
+    transform: translateZ(160px);
+}
+
+.preloader-sector,
+.preloader-sector:empty:before {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
+.preloader-sector:empty:before {
+    background: linear-gradient(transparent 50%, #BFE2FF 50% 55%, transparent 55%);
+    content: "";
+}
+
+
+
+@keyframes spin-1 {
+    from {
+        transform: rotateY(0) rotateX(0);
+    }
+
+    to {
+        transform: rotateY(1turn) rotateX(0);
+    }
+}
+
+@keyframes spin-2 {
+    from {
+        transform: rotateY(0);
+    }
+
+    to {
+        transform: rotateY(1turn);
+    }
+}
+
+
+
+
+/* End Preloader New */
+
 ::-webkit-scrollbar {
     width: 0;
   }
